samples/_failures_safe/1761469468_f5c8b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fdc0d10.c: In function ‘main’:
./samples/SAFE/__tmp_8fdc0d10.c:146:12: error: missing terminating " character
  146 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_8fdc0d10.c:146:5: error: expected expression at end of input
  146 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_8fdc0d10.c:146:5: error: expected declaration or statement at end of input
